# freetype-whatever

./: CMakeLists.txt  LICENSE.md  README.md
config/: ftconfig.in  ftmodule.h.in  ftmodule.in  ftoption.h.in  ftoption.in
src/base/: ftdebug.c
